--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+$body-bg:       #056674;
+$body-color:    #E0ECE4;
+
+$primary:       #66BFBF;
+$secondary:     #FF6B6B;
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
