--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,11 @@ $body-color:    #E0ECE4;
 
 $primary:       #66BFBF;
 $secondary:     #FF6B6B;
+$tertiary:      #056674;
+
+$theme-colors: (
+    "tertiary": $tertiary
+);
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
