+contact; +pricing; -navbar.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
-<div class="row vh-100 align-items-center" (mouseenter)="setActiveLink()">
+<div class="row vh-100 align-items-center">
     <div class="col text-center" [@FadeIn]>
       <p class="h3 text-secondary">Optimum</p>
       <p class="h1 text-primary">AlecKayetion</p>
       <p>Giving you precise solutions at the lowest cost</p>
-      <div class="pt-5">
+      <!-- <div class="pt-5">
         <img src="../../assets/icons/chevron-double-down.svg" class="p-1 rounded-circle bg-primary">
-      </div>
+      </div> -->
     </div>
 </div>
