--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,27 @@
-<app-navbar [activeNavLink]='activeNavLink'></app-navbar>
-<div class="container-fluid">
-  <app-home (activeNavLink)='activeNavLink=$event'></app-home>
-  <app-services-offered (activeNavLink)='activeNavLink=$event'></app-services-offered>
+<div #home class="container-fluid" style="background-image: linear-gradient(to top, #000, #056674); background-attachment: fixed;">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent sticky-top" id="navbar">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
+    [attr.aria-expanded]="!isCollapsed" aria-controls="navbarNav" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav" [collapse]="isCollapsed" [isAnimated]="true">
+        <div class="navbar-nav">
+            <a [class]="activeNavLink=='home' ? 'nav-link active' : 'nav-link'" (click)="scroll(home)" type="button">Home</a>
+            <a [class]="activeNavLink=='services' ? 'nav-link active' : 'nav-link'" (click)="scroll(services)" type="button">Services</a>
+            <a [class]="activeNavLink=='pricing' ? 'nav-link active' : 'nav-link'" (click)="scroll(pricing)" type="button">Pricing</a>
+            <a [class]="activeNavLink=='contact' ? 'nav-link active' : 'nav-link'" (click)="scroll(contact)" type="button">Contact</a>
+        </div>
+    </div>
+  </nav>
+    <app-home></app-home>
+  <div #services>
+    <app-services-offered></app-services-offered>
+  </div>
+  <div #pricing>
+    <app-pricing></app-pricing>
+  </div>
+  <div #contact>
+    <app-contact></app-contact>
+  </div>
 </div>
