--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,16 +8,16 @@
                 <form [formGroup]="data" (ngSubmit)="onSubmit(data.value)">
                     <div class="form-group">
                         <label for="Email">Email</label>
-                        <input type="email" class="form-control" name="Email" aria-describedby="emailHelp" placeholder="Enter email" formControlName="Email">
+                        <input type="email" [class]="Email.invalid && Email.touched ? 'form-control is-invalid': 'form-control'" name="Email" aria-describedby="emailHelp" placeholder="Enter email" formControlName="Email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
                         <label for="fullname">Full Name</label>
-                        <input type="text" class="form-control" name="Fullname" placeholder="Full Name" formControlName="Name">
+                        <input type="text" [class]="Name.invalid && Name.touched ? 'form-control is-invalid': 'form-control'" name="Fullname" placeholder="Full Name" formControlName="Name">
                     </div>
                     <div class="form-group">
                         <label for="comment">Comment</label>
-                        <textarea class="form-control" formControlName="Comment" name="Comment">
+                        <textarea [class]="Comment.invalid && Comment.touched ? 'form-control is-invalid': 'form-control'" formControlName="Comment" name="Comment">
                         </textarea>
                     </div>
                     <button type="submit" class="btn btn-primary" [disabled]="!data.valid">Submit</button>
