contact submit button spinner & success

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
   </nav>
-    <app-home></app-home>
+  <app-home></app-home>
   <div #services>
     <app-services-offered></app-services-offered>
   </div>
@@ -24,7 +24,7 @@
   <div #contact>
     <app-contact></app-contact>
   </div>
-  <p class="text-center">
-    Copyright © {{ now | date:'yyyy' }} AlecKayetion Inc. All rights reserved.
-  </p>
+  <div class="text-center">
+    <span>Copyright © {{ now | date:'yyyy' }} AlecKayetion Inc. All rights reserved.</span>
+  </div>
 </div>
