--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div #home class="container-fluid" style="background-image: linear-gradient(to top, #000, #056674); background-attachment: fixed;">
+<div #home class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-bottom" id="navbar">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
