--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row vh-100 align-items-center justify-content-center mb-5">
         <!-- <div class="row"> -->
-            <h1 class="text-center mb-5">Contact Us</h1>
+            <h1 class="text-center">Contact Us</h1>
         <!-- </div> -->
         <!-- <div class="row"> -->
             <div class="col-md-6 offset-md-3">
