--- a/src/app/services-offered/services-offered.component.html
+++ b/src/app/services-offered/services-offered.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="row vh-100 align-items-center justify-content-center p-3">
+<div class="row align-items-center justify-content-center p-3">
     <div *ngIf="isVisible">
         <h1 class="text-center mb-3">
             Services Offered
