comment out animation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row vh-100 align-items-center">
-    <div class="col text-center" [@FadeIn]>
+    <div class="col text-center">
       <p class="h3 text-secondary">Optimum</p>
       <p class="h1 text-primary">AlecKayetion</p>
       <p>Giving you precise solutions at the lowest cost</p>
