--- a/src/app/services-offered/services-offered.component.html
+++ b/src/app/services-offered/services-offered.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row align-items-center justify-content-center p-3">
     <div *ngIf="isVisible">
-        <h1 class="text-center mb-3">
+        <h1 class="text-center mb-3 pt-5">
             Services Offered
         </h1>
         <div class="card-deck">
