add animation to services-offered

--- a/src/app/services-offered/services-offered.component.html
+++ b/src/app/services-offered/services-offered.component.html
@@ -5,7 +5,7 @@
             Services Offered
         </h1>
         <div class="card-deck">
-            <div class="card bg-transparent border border-primary shadow">
+            <div class="card bg-transparent border border-primary shadow" [@LeftToRight]>
                 <img src="../../assets/images//technology-1940695_1920.jpg" class="card-img-top" alt="Mobile Development Services Offered">
                 <div class="card-body">
                     <h5 class="card-title">Mobile Development</h5>
@@ -15,7 +15,7 @@
                     <button type="button" class="btn btn-secondary btn-block">Get Started Now</button>
                 </div> -->
             </div>
-            <div class="card bg-transparent border border-primary shadow">
+            <div class="card bg-transparent border border-primary shadow" [@RightToLeft]>
                 <img src="../../assets/images/luca-bravo-XJXWbfSo2f0-unsplash.jpg" class="card-img-top" alt="Website Development Services Offered">
                 <div class="card-body">
                     <h5 class="card-title">Website Development</h5>
