remove type="button"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav" [collapse]="isCollapsed" [isAnimated]="true">
         <div class="navbar-nav">
-            <a [class]="activeNavLink=='home' ? 'nav-link text-secondary active' : 'nav-link text-secondary'" (click)="scroll(home)" type="button">AlecKayetion</a>
-            <a [class]="activeNavLink=='services' ? 'nav-link active' : 'nav-link'" (click)="scroll(services)" type="button">Services</a>
-            <a [class]="activeNavLink=='pricing' ? 'nav-link active' : 'nav-link'" (click)="scroll(pricing)" type="button">Pricing</a>
-            <a [class]="activeNavLink=='contact' ? 'nav-link active' : 'nav-link'" (click)="scroll(contact)" type="button">Contact</a>
+            <a [class]="activeNavLink=='home' ? 'nav-link text-secondary active' : 'nav-link text-secondary'" (click)="scroll(home)">AlecKayetion</a>
+            <a [class]="activeNavLink=='services' ? 'nav-link active' : 'nav-link'" (click)="scroll(services)">Services</a>
+            <a [class]="activeNavLink=='pricing' ? 'nav-link active' : 'nav-link'" (click)="scroll(pricing)">Pricing</a>
+            <a [class]="activeNavLink=='contact' ? 'nav-link active' : 'nav-link'" (click)="scroll(contact)">Contact</a>
         </div>
     </div>
   </nav>
