update subtitle in home.component.html

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="col text-center" [@FadeIn]>
       <p class="h3 text-secondary">Optimum</p>
       <p class="h1 text-primary">AlecKayetion</p>
-      <p>Giving you precise solutions at the lowest cost</p>
+      <p>Helping you allocate your resources to meet your goals</p>
       <!-- <div class="pt-5">
         <img src="../../assets/icons/chevron-double-down.svg" class="p-1 rounded-circle bg-primary">
       </div> -->
